--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "author": "Ryan Gaus",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.4.1"
+    "bluebird": "^3.4.1",
+    "commander": "^2.9.0",
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
