--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "commander": "^2.9.0",
+    "fs-promise": "^0.5.0",
+    "user-home": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
