--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.1",
+    "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "fs-promise": "^0.5.0",
     "untildify": "^3.0.2",
