--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bluebird": "^3.4.1",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "editor": "^1.0.0",
     "fs-promise": "^0.5.0",
     "untildify": "^3.0.2",
     "user-home": "^2.0.0"
