--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "commander": "^2.9.0",
     "editor": "^1.0.0",
     "fs-promise": "^0.5.0",
+    "inquirer-promise": "0.0.3",
+    "request-promise": "^3.0.0",
     "untildify": "^3.0.2",
     "user-home": "^2.0.0"
   },
