--- a/circle.yml
+++ b/circle.yml
@@ -4,10 +4,9 @@ machine:
 
 checkout:
   post:
-    - "git clone https://github.com/sstephenson/bats.git"
-    - "cd bats"
-    - "./install.sh /usr/local"
+    - git clone https://github.com/sstephenson/bats.git
+    - cd bats && ./install.sh /usr/local
 
 test:
   override:
-    - "bats --tap test/"
+    - bats --tap test/
